@@ -6,6 +6,7 @@ Version 1.1.0 to be released
 ----------------------------
 - Bug #735: CDbCriteria should save 'with' attribute when toArray() is called (Qiang)
 - Chg: renamed CDetailView::model to be 'data'. renamed 'dataField' and 'dataExpression' to be 'name' and 'value' for grid view columns. (Qiang)
+- Enh #656: Added support to indicate the size of enum column type for MySQL schema (sebas)
 - Enh #767: Added CUrlRule::matchValue option to support creating URLs only when a rule's parameter value patterns are matched. (Qiang)
 - Enh: Improved the default code generated by the yiic tool (Qiang)
 - Enh: Refactored the blog demo (Qiang)
